Include associated audits in the condition
As we are showing `own_and_associated_audits` it has sense to
check if the same set is empty.

--- a/app/views/admin/audits/_audits.html.erb
+++ b/app/views/admin/audits/_audits.html.erb
@@ -1,6 +1,6 @@
 <h2><%= t("admin.audits.title") %></h2>
 
-<% if resource.audits.empty? %>
+<% if resource.own_and_associated_audits.empty? %>
   <p><%= t("admin.audits.empty") %></p>
 <% else %>
   <table id="audits">
