--- a/app/components/custom/admin/audits/index_component.html.erb
+++ b/app/components/custom/admin/audits/index_component.html.erb
@@ -1,26 +1,33 @@
-<% if audits.empty? %>
+<% if empty_database? %>
   <div class="callout alert margin">
     <p><%= t("admin.audits.empty") %></p>
   </div>
 <% else %>
-  <table id="audits">
-    <thead>
-      <tr>
-        <th><%= t("admin.audits.id") %></th>
-        <th><%= t("admin.audits.auditable") %></th>
-        <th><%= t("admin.audits.field") %></th>
-        <th><%= t("admin.audits.old_value") %></th>
-        <th><%= t("admin.audits.new_value") %></th>
-        <th><%= t("admin.audits.edited_at") %></th>
-        <th><%= t("admin.audits.edited_by") %></th>
-        <th><%= t("admin.audits.associated") %></th>
-        <th><%= t("admin.audits.actions") %></th>
-      </tr>
-    </thead>
-    <tbody>
-      <% audits.each do |audit| %>
-        <% audit.audited_changes.each do |field, (old_value, new_value)| %>
-          <tr>
+  <%= render Admin::Audits::SearchComponent.new %>
+
+  <% if empty_search? %>
+    <div class="callout alert margin">
+      <%= t("admin.shared.no_search_results") %>
+    </div>
+  <% else %>
+    <table id="audits">
+      <thead>
+        <tr>
+          <th><%= t("admin.audits.id") %></th>
+          <th><%= t("admin.audits.auditable") %></th>
+          <th><%= t("admin.audits.field") %></th>
+          <th><%= t("admin.audits.old_value") %></th>
+          <th><%= t("admin.audits.new_value") %></th>
+          <th><%= t("admin.audits.edited_at") %></th>
+          <th><%= t("admin.audits.edited_by") %></th>
+          <th><%= t("admin.audits.associated") %></th>
+          <th><%= t("admin.audits.actions") %></th>
+        </tr>
+      </thead>
+      <tbody>
+        <% audits.each do |audit| %>
+          <% audit.audited_changes.each do |field, (old_value, new_value)| %>
+            <tr>
             <td><%= audit.id %></td>
             <td><%= audit.auditable_type %>#<%= audit.auditable_id %></td>
             <td><%= sanitize(audit.auditable.class.human_attribute_name(field)) %></td>
@@ -34,11 +41,12 @@
                 <%= actions.action(:show, text: t("shared.show"), path: admin_audit_path(audit)) %>
               <% end %>
             </td>
-          </tr>
+            </tr>
+          <% end %>
         <% end %>
-      <% end %>
-    </tbody>
-  </table>
+      </tbody>
+    </table>
 
-  <%= paginate audits %>
+    <%= paginate audits %>
+  <% end %>
 <% end %>
