--- a/app/assets/stylesheets/admin/menu.scss
+++ b/app/assets/stylesheets/admin/menu.scss
@@ -117,6 +117,10 @@
     &.tenants-link {
       @include icon(building, regular);
     }
+
+    &.audits-link {
+      @include icon(clipboard-check, solid);
+    }
   }
 
   li {
