Make auditable work with deleted auditable records
Check all the audited existing views so they use the same helpers.

--- a/app/components/custom/admin/audits/show_component.html.erb
+++ b/app/components/custom/admin/audits/show_component.html.erb
@@ -5,9 +5,10 @@
 
 <% audit.audited_changes.each do |field, (old_value, new_value)| %>
   <strong><%= t("admin.audits.field") %></strong>
-  <p><%= sanitize(audit.auditable.class.human_attribute_name(field)) %></p>
+  <p><%= sanitize(field_name(audit, field)) %></p>
   <strong><%= t("admin.audits.old_value") %></strong>
-  <p><%= wysiwyg(audit_value(audit.auditable, field, old_value)) %></p>
+  <p><%= wysiwyg(audit_value(old_value)) %></p>
   <strong><%= t("admin.audits.new_value") %></strong>
-  <p><%= wysiwyg(audit_value(audit.auditable, field, new_value)) %></p>
+  <p><%= wysiwyg(audit_value(new_value)) %></p>
+  <hr>
 <% end %>
