--- a/app/components/custom/admin/audits/index_component.html.erb
+++ b/app/components/custom/admin/audits/index_component.html.erb
@@ -31,8 +31,8 @@
             <td><%= audit.id %></td>
             <td><%= audit.auditable_type %>#<%= audit.auditable_id %></td>
             <td><%= sanitize(field_name(audit, field)) %></td>
-            <td><%= truncate(join_value(old_value), length: 50) %></td>
-            <td><%= truncate(join_value(new_value), length: 50) %></td>
+            <td><%= truncate(audit_value(old_value), length: 50) %></td>
+            <td><%= truncate(audit_value(new_value), length: 50) %></td>
             <td><%= l audit.created_at, format: :datetime %></td>
             <td><%= audit.user&.name %></td>
             <td><%= audit.associated_type %>#<%= audit.associated_id %></td>
