--- a/app/views/custom/admin/audits/_audits.html.erb
+++ b/app/views/custom/admin/audits/_audits.html.erb
@@ -20,12 +20,12 @@
         <% audit.audited_changes.each do |field, (old_value, new_value)| %>
           <tr>
             <td class="text-center"><%= audit.id %></td>
-            <td class="small"><%= sanitize(resource.class.human_attribute_name(field)) %></td>
+            <td class="small"><%= sanitize(field_name(audit, field)) %></td>
             <td class="small">
-              <div class="audit-value"><%= truncate_audit_value(resource, field, old_value) %></div>
+              <div class="audit-value"><%= truncate_audit_value(old_value) %></div>
             </td>
             <td class="small">
-              <div class="audit-value"><%= truncate_audit_value(resource, field, new_value) %></div>
+              <div class="audit-value"><%= truncate_audit_value(new_value) %></div>
             </td>
             <td class="small">
               <%= l audit.created_at.to_date %>
