--- a/app/components/custom/admin/audits/index_component.html.erb
+++ b/app/components/custom/admin/audits/index_component.html.erb
@@ -25,25 +25,7 @@
         </tr>
       </thead>
       <tbody>
-        <% audits.each do |audit| %>
-          <% audit.audited_changes.each do |field, (old_value, new_value)| %>
-            <tr>
-            <td><%= audit.id %></td>
-            <td><%= audit.auditable_type %>#<%= audit.auditable_id %></td>
-            <td><%= sanitize(field_name(audit, field)) %></td>
-            <td><%= truncate(audit_value(old_value), length: 50) %></td>
-            <td><%= truncate(audit_value(new_value), length: 50) %></td>
-            <td><%= l audit.created_at, format: :datetime %></td>
-            <td><%= audit.user&.name %></td>
-            <td><%= audit.associated_type %>#<%= audit.associated_id %></td>
-            <td>
-              <%= render Admin::TableActionsComponent.new(audit, actions: []) do |actions| %>
-                <%= actions.action(:show, text: t("shared.show"), path: admin_audit_path(audit)) %>
-              <% end %>
-            </td>
-            </tr>
-          <% end %>
-        <% end %>
+        <%= render Admin::Audits::RowComponent.with_collection(audits) %>
       </tbody>
     </table>
 
