Show values at most logical place
Now, when showing `audited_changes` from an audit with the
`create` action we show the value in the `New value` column and the
`Old value` column it's empty. When the audit action is `destroy` we
show the value in the `Old value` column while the `New value`
column is empty. Before this change, we were using the `Old value`
always that was very confusing.

--- a/app/components/custom/admin/audits/show_component.html.erb
+++ b/app/components/custom/admin/audits/show_component.html.erb
@@ -3,12 +3,12 @@
 
 <h3><%= t("admin.audits.changes") %></h3>
 
-<% audit.audited_changes.each do |field, (old_value, new_value)| %>
+<% audit.audited_changes.each do |field, changes| %>
   <strong><%= t("admin.audits.field") %></strong>
   <p><%= sanitize(field_name(audit, field)) %></p>
   <strong><%= t("admin.audits.old_value") %></strong>
-  <p><%= wysiwyg(audit_value(old_value)) %></p>
+  <p><%= wysiwyg(audit_value(old_value(audit, changes))) %></p>
   <strong><%= t("admin.audits.new_value") %></strong>
-  <p><%= wysiwyg(audit_value(new_value)) %></p>
+  <p><%= wysiwyg(audit_value(new_value(audit, changes))) %></p>
   <hr>
 <% end %>
