--- a/app/components/custom/admin/audits/row_component.html.erb
+++ b/app/components/custom/admin/audits/row_component.html.erb
@@ -1,10 +1,10 @@
-<% audit.audited_changes.each do |field, (old_value, new_value)| %>
+<% audit.audited_changes.each do |field, changes| %>
   <tr>
     <td><%= audit.id %></td>
     <td><%= audit.auditable_type %>#<%= audit.auditable_id %></td>
     <td><%= sanitize(field_name(audit, field)) %></td>
-    <td><%= truncate(audit_value(old_value), length: 50) %></td>
-    <td><%= truncate(audit_value(new_value), length: 50) %></td>
+    <td><%= truncate(audit_value(old_value(audit, changes)), length: 50) %></td>
+    <td><%= truncate(audit_value(new_value(audit, changes)), length: 50) %></td>
     <td><%= l audit.created_at, format: :datetime %></td>
     <td><%= audit.user&.name %></td>
     <td><%= audit.associated_type %>#<%= audit.associated_id %></td>
